[tool.poetry]
name = "causal_discovery"
version = "1.0.5"
description = "causal discovery server."
authors = ["zhangkun", "zhangdongcheng"]
packages = [{include="causal_discovery", from="src"}]

[[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.2"
scipy = "^1.5.4"
arrow = "^0.17.0"
pandas = "^1.1.4"
numpy = "^1.16"
portion = "^2.1.4"
pyfunctional = "^1.4.2"
scikit-learn = "^0.23.2"
tqdm = "^4.54.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "19.10b0"
isort = "4.3.21"
flake8 = "3.7.9"
tox = "3.20.1"
invoke = "1.4.1"
pylint = "2.6.0"
sphinx = {version = "3.4.0", optional = true}
sphinx-rtd-theme = {version = "0.5.0", optional = true}
recommonmark = {version = "0.7.1", optional = true}
sphinx-markdown-tables = {version = "0.0.15", optional = true}

[tool.poetry.extras]
doc = ["sphinx", "sphinx-rtd-theme", "recommonmark", "sphinx-markdown-tables"]

[tool.black]
line-length = 90

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
known_third_party = ""
skip = "test,tests"

[tool.coverage.run]
# include source files
source=["./src/"]
# exclude source files
omit=[]

[build-system]
requires = ["poetry-core>=1.0.7-1"]
build-backend = "poetry.core.masonry.api"